# ObjectDetectwithRos

./: .gitignore  CMakeLists.txt  README.md  object.yaml  object_detector_node.cpp  package.xml
config/: GlobalCamera.yaml  HandCamera.yaml  README.md  object.yaml
doc/ArucoTag/: ArucoTag_reame.txt
doc/ArucoTag/ArucoTag/: CMakeLists.txt  main.cpp
inc/: camera.h  objectDetectorOnRos.h  objectDetectorViaAruco.h
launch/: object_detect.launch  usbcam_eye.launch
msg/: objectPose.msg
src/: camera.cpp  objectDetectorOnRos.cpp  objectDetectorViaAruco.cpp
test/: CMakeLists.txt  FunctionTest.cpp
